# leuk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/add-browser/: SKILL.md
.claude/skills/add-ollama-tool/: SKILL.md
.claude/skills/add-scheduler/: SKILL.md
.claude/skills/add-telegram/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/setup/: SKILL.md
docs/: README.md  architecture.md  channels.md  cli-and-ui.md  configuration.md  context-management.md  development.md  getting-started.md  mcp.md  multimodal.md  providers.md  refinements-plan.md  repl-commands.md  safety.md  scheduler.md  sessions-and-persistence.md  skills.md  steering.md  tools.md  voice.md
docs/reference/: environment.md  file-layout.md  system-dependencies.md
docs/tools/: browser.md  input_control.md  monitoring.md
scripts/: setup-input-control.sh
src/leuk/: __init__.py  __main__.py  billing.py  config.py  host.py  media.py  media_render.py  safety.py  types.py
src/leuk/agent/: __init__.py  archive.py  context.py  core.py  session.py  steering.py  sub_agent.py  team.py  undo.py
src/leuk/channels/: __init__.py  base.py  discord.py  markdown.py  pipe.py  repl.py  slack.py  telegram.py
src/leuk/cli/: __init__.py  approval.py  auth.py  banner.py  blocks.py  doctor.py  extensions_manager.py  history_browser.py  models.py  render.py  repl.py  settings_dialog.py  theme.py  tui.py  voice_settings.py
src/leuk/mcp/: __init__.py  bridge.py  client.py  registry.py  server.py
src/leuk/memory/: __init__.py  loader.py
src/leuk/persistence/: __init__.py  base.py  memory.py  redis.py  sqlite.py
src/leuk/providers/: __init__.py  anthropic.py  base.py  catalog.py  context_window.py  google.py  model_info.py  openai.py  openrouter.py  zen.py
src/leuk/sandbox/: Dockerfile  __init__.py  container.py  mount_policy.py
src/leuk/scheduler/: __init__.py  runner.py  store.py  task.py
src/leuk/skills/: __init__.py  loader.py  tool.py
src/leuk/tools/: __init__.py  base.py  browser.py  file_edit.py  file_read.py  history.py  input_control.py  local_llm.py  memory_write.py  monitoring.py  shell.py  sub_agent.py  web_fetch.py  web_search.py
src/leuk/voice/: __init__.py  recorder.py  stt.py  tts.py
tests/: conftest.py  test_agent.py  test_approval.py  test_auth.py  test_billing.py  test_blocks.py  test_browser.py  test_channel_markdown.py  test_channels.py  test_completion.py  test_config.py  test_context.py  test_context_overflow.py  test_desktop_safety.py  test_doctor.py  test_e2e_click_coverage.py  test_extensions_manager.py  test_graceful_errors.py  test_history_browser.py  test_history_tool.py  test_host.py  test_input_control.py  test_mcp_registry.py  test_mcp_server.py  test_media_render.py  test_memory.py  test_models.py  test_monitoring.py  test_multimodal.py  test_persistence.py  test_persistence_guard.py  test_render.py  test_safety.py  test_sandbox.py  test_scheduler.py  test_session.py  test_session_title.py  test_skills.py  test_steering.py  test_thinking.py  (+7 more)
