[project]
name = "leuk"
version = "0.1.0"
description = "Persistent AI agent with sub-agent orchestration and environment access"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Rustam Abdulatipov", email = "rabdulatipoff@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    # LLM providers
    "anthropic>=0.52",
    "openai>=1.82",
    "google-genai>=1.16",
    # Persistence
    "aiosqlite>=0.21",
    # Config
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    # CLI
    "prompt-toolkit>=3.0",
    "rich>=14.0",
    "httpx>=0.28",
    "mcp>=1.26.0",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
voice = [
    "sounddevice>=0.5",
    "numpy>=2.0",
    "transformers>=4.40",
    "torch>=2.9",
    "torchaudio>=2.9",
    # Silero TTS loads via torch.hub which requires omegaconf
    "omegaconf>=2.3",
    # Pulled explicitly so uv maps it to the pytorch-rocm index
    # (transitive dep from torch doesn't inherit [tool.uv.sources])
    "triton-rocm>=3.6; sys_platform == 'linux'",
]

[project.scripts]
leuk = "leuk.cli.repl:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }

# PyTorch hardware-specific indexes.  Switch ``[tool.uv.sources]`` above
# to use the one matching your hardware:
#   pytorch-cpu   — CPU-only (smallest, default fallback)
#   pytorch-rocm  — AMD GPUs (ROCm 7.1)
#   pytorch-cuda  — NVIDIA GPUs (CUDA 12.6)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
